--- a/Linear_Regression/linear_regression_gradient_descent.ipynb
+++ b/Linear_Regression/linear_regression_gradient_descent.ipynb
@@ -213,6 +213,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Der Plot zeigt die Konvergenz der Parameter \\(\\theta_0\\) und \\(\\theta_1\\) über die Iterationen des Batch-Gradientenabstiegs. Die beiden Parameter \\(\\theta_0\\) (rot) und \\(\\theta_1\\) (grün) beginnen mit initialen Werten und werden durch den Gradientenabstieg sukzessive optimiert, bis sie stabile Werte erreichen. Die flachen Linien am Ende des Plots zeigen, dass sich die Parameterwerte nicht weiter ändern – die Konvergenz ist erreicht.\n",
+    "\n",
+    "### Interpretation:\n",
+    "- **\\(\\theta_0\\)** konvergiert auf einen Wert knapp unter 2.\n",
+    "- **\\(\\theta_1\\)** konvergiert auf einen Wert von etwa 3.5.\n",
+    "- Diese Werte sind die optimalen Parameter für die lineare Regression des Datensatzes, gefunden durch Batch-Gradientenabstieg.\n",
+    "\n",
+    "### Was ist der Batch-Gradientenabstieg?\n",
+    "Batch-Gradientenabstieg ist eine Optimierungstechnik, die verwendet wird, um die Parameter eines Modells (hier die \\(\\theta\\)-Werte einer linearen Regression) zu optimieren, indem die **gesamten Trainingsdaten** für jede Iteration verwendet werden. Dabei:\n",
+    "1. Berechnet man für jeden Parameter den Gradienten (die Ableitung der Fehlerfunktion).\n",
+    "2. Aktualisiert die Parameter in die Richtung des negativen Gradienten, um die Fehlerfunktion zu minimieren.\n",
+    "\n",
+    "Durch diese iterative Anpassung werden die Parameter Schritt für Schritt optimiert, bis das Modell möglichst genau die Zielvariable vorhersagen kann."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Calculate values for theta_0 und theta_1 using linear regression"
    ]
   },
@@ -238,6 +257,26 @@
     "# Print values for theta_0 und theta_1\n",
     "print(\"theta_0: \", lin_reg.intercept_)\n",
     "print(\"theta_1: \", lin_reg.coef_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In diesem Code-Snippet wird die lineare Regression mithilfe der `LinearRegression`-Klasse von `sklearn` durchgeführt, um die optimalen Werte für die Parameter \\(\\theta_0\\) und \\(\\theta_1\\) zu berechnen. Diese Parameter repräsentieren den Achsenabschnitt (Intercept) und die Steigung (Koeffizient) der linearen Regressionslinie.\n",
+    "\n",
+    "### Erklärung des Codes:\n",
+    "1. **Initialisierung des Modells**: `lin_reg = LinearRegression()` erstellt ein lineares Regressionsmodell.\n",
+    "2. **Anpassung des Modells**: `lin_reg.fit(X, y)` passt das Modell an die Daten an, indem es die besten Werte für \\(\\theta_0\\) und \\(\\theta_1\\) berechnet. Die Methode `fit` verwendet dabei den gegebenen Datensatz `(X, y)` und minimiert die Fehlerfunktion (in diesem Fall die Summe der quadratischen Fehler) für die optimale Linie.\n",
+    "3. **Ausgabe der Parameter**:\n",
+    "   - `lin_reg.intercept_` gibt den Achsenabschnitt \\(\\theta_0\\) aus, der den vorhergesagten Wert von \\(y\\) angibt, wenn \\(x = 0\\) ist.\n",
+    "   - `lin_reg.coef_` gibt die Steigung \\(\\theta_1\\) an, die den Einfluss von \\(x\\) auf \\(y\\) beschreibt.\n",
+    "\n",
+    "### Ergebnisse:\n",
+    "- **\\(\\theta_0\\) (Intercept)**: Der Wert beträgt ungefähr `1.645`, was bedeutet, dass, wenn \\(x = 0\\) ist, \\(y\\) bei etwa 1.645 liegt.\n",
+    "- **\\(\\theta_1\\) (Slope)**: Der Wert beträgt ungefähr `3.724`, was bedeutet, dass für eine Einheitserhöhung von \\(x\\), \\(y\\) um etwa 3.724 Einheiten steigt.\n",
+    "\n",
+    "Diese Werte geben die optimale Regressionsgerade für den gegebenen Datensatz an, die durch das `fit`-Verfahren der `LinearRegression`-Klasse berechnet wurde.<>"
    ]
   },
   {
